--- a/doc/source/whatsnew/v0.13.0.rst
+++ b/doc/source/whatsnew/v0.13.0.rst
@@ -176,15 +176,15 @@ API changes
 
   .. ipython:: python
 
-     dfc = pd.DataFrame({'A': ['aaa', 'bbb', 'ccc'], 'B': [1, 2, 3]})
-     pd.set_option('chained_assignment', 'warn')
+     dfc = pd.DataFrame({"A": ["aaa", "bbb", "ccc"], "B": [1, 2, 3]})
+     pd.set_option("chained_assignment", "warn")
 
   The following warning / exception will show if this is attempted.
 
   .. ipython:: python
      :okwarning:
 
-     dfc.loc[0]['A'] = 1111
+     dfc.loc[0]["A"] = 1111
 
   ::
 
@@ -198,7 +198,7 @@ API changes
 
   .. ipython:: python
 
-     dfc.loc[0, 'A'] = 11
+     dfc.loc[0, "A"] = 11
      dfc
 
 - ``Panel.reindex`` has the following call signature ``Panel.reindex(items=None, major_axis=None, minor_axis=None, **kwargs)``
@@ -250,20 +250,19 @@ In the ``Series`` case this is effectively an appending operation
 
    s = pd.Series([1, 2, 3])
    s
-   s[5] = 5.
+   s[5] = 5.0
    s
 
 .. ipython:: python
 
-   dfi = pd.DataFrame(np.arange(6).reshape(3, 2),
-                      columns=['A', 'B'])
+   dfi = pd.DataFrame(np.arange(6).reshape(3, 2), columns=["A", "B"])
    dfi
 
 This would previously ``KeyError``
 
 .. ipython:: python
 
-   dfi.loc[:, 'C'] = dfi.loc[:, 'A']
+   dfi.loc[:, "C"] = dfi.loc[:, "A"]
    dfi
 
 This is like an ``append`` operation.
@@ -380,30 +379,31 @@ HDFStore API changes
 
   .. ipython:: python
 
-     path = 'test.h5'
-     dfq = pd.DataFrame(np.random.randn(10, 4),
-                        columns=list('ABCD'),
-                        index=pd.date_range('20130101', periods=10))
-     dfq.to_hdf(path, 'dfq', format='table', data_columns=True)
+     path = "test.h5"
+     dfq = pd.DataFrame(
+         np.random.randn(10, 4),
+         columns=list("ABCD"),
+         index=pd.date_range("20130101", periods=10),
+     )
+     dfq.to_hdf(path, "dfq", format="table", data_columns=True)
 
   Use boolean expressions, with in-line function evaluation.
 
   .. ipython:: python
 
-     pd.read_hdf(path, 'dfq',
-                 where="index>Timestamp('20130104') & columns=['A', 'B']")
+     pd.read_hdf(path, "dfq", where="index>Timestamp('20130104') & columns=['A', 'B']")
 
   Use an inline column reference
 
   .. ipython:: python
 
-     pd.read_hdf(path, 'dfq',
-                 where="A>0 or C>0")
+     pd.read_hdf(path, "dfq", where="A>0 or C>0")
 
   .. ipython:: python
      :suppress:
 
      import os
+
      os.remove(path)
 
 - the ``format`` keyword now replaces the ``table`` keyword; allowed values are ``fixed(f)`` or ``table(t)``
@@ -412,11 +412,11 @@ HDFStore API changes
 
   .. ipython:: python
 
-     path = 'test.h5'
+     path = "test.h5"
      df = pd.DataFrame(np.random.randn(10, 2))
-     df.to_hdf(path, 'df_table', format='table')
-     df.to_hdf(path, 'df_table2', append=True)
-     df.to_hdf(path, 'df_fixed')
+     df.to_hdf(path, "df_table", format="table")
+     df.to_hdf(path, "df_table2", append=True)
+     df.to_hdf(path, "df_fixed")
      with pd.HDFStore(path) as store:
          print(store)
 
@@ -424,6 +424,7 @@ HDFStore API changes
      :suppress:
 
      import os
+
      os.remove(path)
 
 - Significant table writing performance improvements
@@ -441,12 +442,12 @@ HDFStore API changes
 
   .. ipython:: python
 
-     path = 'test.h5'
+     path = "test.h5"
      df = pd.DataFrame(np.random.randn(10, 2))
      store1 = pd.HDFStore(path)
      store2 = pd.HDFStore(path)
-     store1.append('df', df)
-     store2.append('df2', df)
+     store1.append("df", df)
+     store2.append("df2", df)
 
      store1
      store2
@@ -459,6 +460,7 @@ HDFStore API changes
      :suppress:
 
      import os
+
      os.remove(path)
 
 - removed the ``_quiet`` attribute, replace by a ``DuplicateWarning`` if retrieving
@@ -525,11 +527,11 @@ Enhancements
 
   .. ipython:: python
 
-     pd.to_timedelta('1 days 06:05:01.00003')
-     pd.to_timedelta('15.5us')
-     pd.to_timedelta(['1 days 06:05:01.00003', '15.5us', 'nan'])
-     pd.to_timedelta(np.arange(5), unit='s')
-     pd.to_timedelta(np.arange(5), unit='d')
+     pd.to_timedelta("1 days 06:05:01.00003")
+     pd.to_timedelta("15.5us")
+     pd.to_timedelta(["1 days 06:05:01.00003", "15.5us", "nan"])
+     pd.to_timedelta(np.arange(5), unit="s")
+     pd.to_timedelta(np.arange(5), unit="d")
 
   A Series of dtype ``timedelta64[ns]`` can now be divided by another
   ``timedelta64[ns]`` object, or astyped to yield a ``float64`` dtyped Series. This
@@ -539,19 +541,21 @@ Enhancements
      :okexcept:
 
      import datetime
-     td = pd.Series(pd.date_range('20130101', periods=4)) - pd.Series(
-         pd.date_range('20121201', periods=4))
+
+     td = pd.Series(pd.date_range("20130101", periods=4)) - pd.Series(
+         pd.date_range("20121201", periods=4)
+     )
      td[2] += np.timedelta64(datetime.timedelta(minutes=5, seconds=3))
      td[3] = np.nan
      td
 
      # to days
-     td / np.timedelta64(1, 'D')
-     td.astype('timedelta64[D]')
+     td / np.timedelta64(1, "D")
+     td.astype("timedelta64[D]")
 
      # to seconds
-     td / np.timedelta64(1, 's')
-     td.astype('timedelta64[s]')
+     td / np.timedelta64(1, "s")
+     td.astype("timedelta64[s]")
 
   Dividing or multiplying a ``timedelta64[ns]`` Series by an integer or integer Series
 
@@ -565,6 +569,7 @@ Enhancements
   .. ipython:: python
 
      from pandas import offsets
+
      td + offsets.Minute(5) + offsets.Milli(5)
 
   Fillna is now supported for timedeltas
@@ -579,7 +584,7 @@ Enhancements
   .. ipython:: python
 
      td.mean()
-     td.quantile(.1)
+     td.quantile(0.1)
 
 - ``plot(kind='kde')`` now accepts the optional parameters ``bw_method`` and
   ``ind``, passed to scipy.stats.gaussian_kde() (for scipy >= 0.11.0) to set
@@ -594,7 +599,7 @@ Enhancements
   .. ipython:: python
      :okwarning:
 
-     pd.Series(['a1', 'b2', 'c3']).str.extract('[ab](\\d)')
+     pd.Series(["a1", "b2", "c3"]).str.extract("[ab](\\d)")
 
   Elements that do not match return ``NaN``. Extracting a regular expression
   with more than one group returns a DataFrame with one column per group.
@@ -603,7 +608,7 @@ Enhancements
   .. ipython:: python
      :okwarning:
 
-     pd.Series(['a1', 'b2', 'c3']).str.extract('([ab])(\\d)')
+     pd.Series(["a1", "b2", "c3"]).str.extract("([ab])(\\d)")
 
   Elements that do not match return a row of ``NaN``.
   Thus, a Series of messy strings can be *converted* into a
@@ -615,16 +620,14 @@ Enhancements
   .. ipython:: python
      :okwarning:
 
-     pd.Series(['a1', 'b2', 'c3']).str.extract(
-         '(?P<letter>[ab])(?P<digit>\\d)')
+     pd.Series(["a1", "b2", "c3"]).str.extract("(?P<letter>[ab])(?P<digit>\\d)")
 
   and optional groups can also be used.
 
   .. ipython:: python
      :okwarning:
 
-      pd.Series(['a1', 'b2', '3']).str.extract(
-          '(?P<letter>[ab])?(?P<digit>\\d)')
+      pd.Series(["a1", "b2", "3"]).str.extract("(?P<letter>[ab])?(?P<digit>\\d)")
 
 - ``read_stata`` now accepts Stata 13 format (:issue:`4291`)
 
@@ -643,19 +646,19 @@ Enhancements
 
   .. ipython:: python
 
-     pd.date_range('2013-01-01', periods=5, freq='5N')
+     pd.date_range("2013-01-01", periods=5, freq="5N")
 
   or with frequency as offset
 
   .. ipython:: python
 
-     pd.date_range('2013-01-01', periods=5, freq=pd.offsets.Nano(5))
+     pd.date_range("2013-01-01", periods=5, freq=pd.offsets.Nano(5))
 
   Timestamps can be modified in the nanosecond range
 
   .. ipython:: python
 
-     t = pd.Timestamp('20130101 09:01:02')
+     t = pd.Timestamp("20130101 09:01:02")
      t + pd.tseries.offsets.Nano(123)
 
 - A new method, ``isin`` for DataFrames, which plays nicely with boolean indexing. The argument to ``isin``, what we're comparing the DataFrame to, can be a DataFrame, Series, dict, or array of values. See :ref:`the docs<indexing.basics.indexing_isin>` for more.
@@ -664,9 +667,9 @@ Enhancements
 
   .. ipython:: python
 
-     dfi = pd.DataFrame({'A': [1, 2, 3, 4], 'B': ['a', 'b', 'f', 'n']})
+     dfi = pd.DataFrame({"A": [1, 2, 3, 4], "B": ["a", "b", "f", "n"]})
      dfi
-     other = pd.DataFrame({'A': [1, 3, 3, 7], 'B': ['e', 'f', 'f', 'e']})
+     other = pd.DataFrame({"A": [1, 3, 3, 7], "B": ["e", "f", "f", "e"]})
      mask = dfi.isin(other)
      mask
      dfi[mask.any(axis=1)]
@@ -679,7 +682,8 @@ Enhancements
 
      # note that pandas.rpy was deprecated in v0.16.0
      import pandas.rpy.common as com
-     com.load_data('Titanic')
+
+     com.load_data("Titanic")
 
 - ``tz_localize`` can infer a fall daylight savings transition based on the structure
   of the unlocalized data (:issue:`4230`), see :ref:`the docs<timeseries.timezone>`
@@ -703,8 +707,9 @@ Enhancements
 
   .. ipython:: python
 
-      df = pd.DataFrame({'A': [1, 2.1, np.nan, 4.7, 5.6, 6.8],
-                        'B': [.25, np.nan, np.nan, 4, 12.2, 14.4]})
+      df = pd.DataFrame(
+          {"A": [1, 2.1, np.nan, 4.7, 5.6, 6.8], "B": [0.25, np.nan, np.nan, 4, 12.2, 14.4]}
+      )
       df.interpolate()
 
   Additionally, the ``method`` argument to ``interpolate`` has been expanded
@@ -726,12 +731,15 @@ Enhancements
   .. ipython:: python
 
     np.random.seed(123)
-    df = pd.DataFrame({"A1970" : {0 : "a", 1 : "b", 2 : "c"},
-                       "A1980" : {0 : "d", 1 : "e", 2 : "f"},
-                       "B1970" : {0 : 2.5, 1 : 1.2, 2 : .7},
-                       "B1980" : {0 : 3.2, 1 : 1.3, 2 : .1},
-                       "X"     : dict(zip(range(3), np.random.randn(3)))
-                      })
+    df = pd.DataFrame(
+        {
+            "A1970": {0: "a", 1: "b", 2: "c"},
+            "A1980": {0: "d", 1: "e", 2: "f"},
+            "B1970": {0: 2.5, 1: 1.2, 2: 0.7},
+            "B1980": {0: 3.2, 1: 1.3, 2: 0.1},
+            "X": dict(zip(range(3), np.random.randn(3))),
+        }
+    )
     df["id"] = df.index
     df
     pd.wide_to_long(df, ["A", "B"], i="id", j="year")
@@ -758,8 +766,7 @@ Experimental
   .. ipython:: python
 
      nrows, ncols = 20000, 100
-     df1, df2, df3, df4 = [pd.DataFrame(np.random.randn(nrows, ncols))
-                           for _ in range(4)]
+     df1, df2, df3, df4 = [pd.DataFrame(np.random.randn(nrows, ncols)) for _ in range(4)]
 
   .. ipython:: python
 
@@ -792,8 +799,8 @@ Experimental
 
   .. ipython:: python
 
-     df = pd.DataFrame(np.random.randn(10, 2), columns=['a', 'b'])
-     df.eval('a + b')
+     df = pd.DataFrame(np.random.randn(10, 2), columns=["a", "b"])
+     df.eval("a + b")
 
 - :meth:`~pandas.DataFrame.query` method has been added that allows
   you to select elements of a ``DataFrame`` using a natural query syntax
@@ -820,8 +827,8 @@ Experimental
   .. ipython:: python
 
      n = 20
-     df = pd.DataFrame(np.random.randint(n, size=(n, 3)), columns=['a', 'b', 'c'])
-     df.query('a < b < c')
+     df = pd.DataFrame(np.random.randint(n, size=(n, 3)), columns=["a", "b", "c"])
+     df.query("a < b < c")
 
   selects all the rows of ``df`` where ``a < b < c`` evaluates to ``True``.
   For more details see the :ref:`the docs<indexing.query>`.
@@ -835,26 +842,26 @@ Experimental
 
   .. code-block:: python
 
-     df = pd.DataFrame(np.random.rand(5, 2), columns=list('AB'))
-     df.to_msgpack('foo.msg')
-     pd.read_msgpack('foo.msg')
+     df = pd.DataFrame(np.random.rand(5, 2), columns=list("AB"))
+     df.to_msgpack("foo.msg")
+     pd.read_msgpack("foo.msg")
 
-     s = pd.Series(np.random.rand(5), index=pd.date_range('20130101', periods=5))
-     pd.to_msgpack('foo.msg', df, s)
-     pd.read_msgpack('foo.msg')
+     s = pd.Series(np.random.rand(5), index=pd.date_range("20130101", periods=5))
+     pd.to_msgpack("foo.msg", df, s)
+     pd.read_msgpack("foo.msg")
 
   You can pass ``iterator=True`` to iterator over the unpacked results
 
   .. code-block:: python
 
-     for o in pd.read_msgpack('foo.msg', iterator=True):
+     for o in pd.read_msgpack("foo.msg", iterator=True):
          print(o)
 
   .. ipython:: python
      :suppress:
      :okexcept:
 
-     os.remove('foo.msg')
+     os.remove("foo.msg")
 
 - ``pandas.io.gbq`` provides a simple way to extract from, and load data into,
   Google's BigQuery Data Sets by way of pandas DataFrames. BigQuery is a high
@@ -882,14 +889,17 @@ Experimental
      # Your Google BigQuery Project ID
      # To find this, see your dashboard:
      # https://console.developers.google.com/iam-admin/projects?authuser=0
-     projectid = 'xxxxxxxxx'
+     projectid = "xxxxxxxxx"
      df = gbq.read_gbq(query, project_id=projectid)
 
      # Use pandas to process and reshape the dataset
 
-     df2 = df.pivot(index='STATION', columns='MONTH', values='MEAN_TEMP')
-     df3 = pd.concat([df2.min(), df2.mean(), df2.max()],
-                     axis=1, keys=["Min Tem", "Mean Temp", "Max Temp"])
+     df2 = df.pivot(index="STATION", columns="MONTH", values="MEAN_TEMP")
+     df3 = pd.concat(
+         [df2.min(), df2.mean(), df2.max()],
+         axis=1,
+         keys=["Min Tem", "Mean Temp", "Max Temp"],
+     )
 
   The resulting DataFrame is::
 
@@ -1028,7 +1038,7 @@ to unify methods and behaviors. Series formerly subclassed directly from
 
   .. ipython:: python
 
-     s = pd.Series([1, 2, 3], index=list('abc'))
+     s = pd.Series([1, 2, 3], index=list("abc"))
      s.b
      s.a = 5
      s
