--- a/doc/source/whatsnew/v0.15.2.rst
+++ b/doc/source/whatsnew/v0.15.2.rst
@@ -28,21 +28,21 @@ API changes
     :okexcept:
     :okwarning:
 
-    df = pd.DataFrame({'jim':[0, 0, 1, 1],
-                       'joe':['x', 'x', 'z', 'y'],
-                       'jolie':np.random.rand(4)}).set_index(['jim', 'joe'])
+    df = pd.DataFrame(
+        {"jim": [0, 0, 1, 1], "joe": ["x", "x", "z", "y"], "jolie": np.random.rand(4)}
+    ).set_index(["jim", "joe"])
     df
     df.index.lexsort_depth
 
     # in prior versions this would raise a KeyError
     # will now show a PerformanceWarning
-    df.loc[(1, 'z')]
+    df.loc[(1, "z")]
 
     # lexically sorting
     df2 = df.sort_index()
     df2
     df2.index.lexsort_depth
-    df2.loc[(1,'z')]
+    df2.loc[(1, "z")]
 
 - Bug in unique of Series with ``category`` dtype, which returned all categories regardless
   whether they were "used" or not (see :issue:`8559` for the discussion).
@@ -64,7 +64,7 @@ API changes
 
   .. ipython:: python
 
-    cat = pd.Categorical(['a', 'b', 'a'], categories=['a', 'b', 'c'])
+    cat = pd.Categorical(["a", "b", "a"], categories=["a", "b", "c"])
     cat.unique()
 
 - ``Series.all`` and ``Series.any`` now support the ``level`` and ``skipna`` parameters. ``Series.all``, ``Series.any``, ``Index.all``, and ``Index.any`` no longer support the ``out`` and ``keepdims`` parameters, which existed for compatibility with ndarray. Various index types no longer support the ``all`` and ``any`` aggregation functions and will now raise ``TypeError``. (:issue:`8302`).
@@ -75,9 +75,9 @@ API changes
 
   .. ipython:: python
 
-     data = pd.DataFrame({'x': [1, 2, 3]})
+     data = pd.DataFrame({"x": [1, 2, 3]})
      data.y = 2
-     data['y'] = [2, 4, 6]
+     data["y"] = [2, 4, 6]
      data
 
      # this assignment was inconsistent
@@ -98,7 +98,7 @@ API changes
   .. ipython:: python
 
      data.y
-     data['y'].values
+     data["y"].values
 
 - ``Timestamp('now')`` is now equivalent to ``Timestamp.now()`` in that it returns the local time rather than UTC. Also, ``Timestamp('today')`` is now equivalent to ``Timestamp.today()`` and both have ``tz`` as a possible argument. (:issue:`9000`)
 
@@ -124,8 +124,8 @@ API changes
 
   .. ipython:: python
 
-     s = pd.Series(np.arange(3), ['a', 'b', 'c'])
-     s.loc['c':'a':-1]
+     s = pd.Series(np.arange(3), ["a", "b", "c"])
+     s.loc["c":"a":-1]
 
 
 .. _whatsnew_0152.enhancements:
@@ -150,7 +150,8 @@ Other enhancements:
   .. code-block:: python
 
      from sqlalchemy.types import String
-     data.to_sql('data_dtype', engine, dtype={'Col_1': String})  # noqa F821
+
+     data.to_sql("data_dtype", engine, dtype={"Col_1": String})  # noqa F821
 
 - ``Series.all`` and ``Series.any`` now support the ``level`` and ``skipna`` parameters (:issue:`8302`):
 
