--- a/doc/source/whatsnew/v0.16.0.rst
+++ b/doc/source/whatsnew/v0.16.0.rst
@@ -53,18 +53,17 @@ and the entire DataFrame (with all original and new columns) is returned.
 
 .. ipython:: python
 
-   iris = pd.read_csv('data/iris.data')
+   iris = pd.read_csv("data/iris.data")
    iris.head()
 
-   iris.assign(sepal_ratio=iris['SepalWidth'] / iris['SepalLength']).head()
+   iris.assign(sepal_ratio=iris["SepalWidth"] / iris["SepalLength"]).head()
 
 Above was an example of inserting a precomputed value. We can also pass in
 a function to be evaluated.
 
 .. ipython:: python
 
-    iris.assign(sepal_ratio=lambda x: (x['SepalWidth']
-                                       / x['SepalLength'])).head()
+    iris.assign(sepal_ratio=lambda x: (x["SepalWidth"] / x["SepalLength"])).head()
 
 The power of ``assign`` comes when used in chains of operations. For example,
 we can limit the DataFrame to just those with a Sepal Length greater than 5,
@@ -72,11 +71,15 @@ calculate the ratio, and plot
 
 .. ipython:: python
 
-   iris = pd.read_csv('data/iris.data')
-   (iris.query('SepalLength > 5')
-        .assign(SepalRatio=lambda x: x.SepalWidth / x.SepalLength,
-                PetalRatio=lambda x: x.PetalWidth / x.PetalLength)
-        .plot(kind='scatter', x='SepalRatio', y='PetalRatio'))
+   iris = pd.read_csv("data/iris.data")
+   (
+       iris.query("SepalLength > 5")
+       .assign(
+           SepalRatio=lambda x: x.SepalWidth / x.SepalLength,
+           PetalRatio=lambda x: x.PetalWidth / x.PetalLength,
+       )
+       .plot(kind="scatter", x="SepalRatio", y="PetalRatio")
+   )
 
 .. image:: ../_static/whatsnew_assign.png
   :scale: 50 %
@@ -94,13 +97,17 @@ Added :meth:`SparseSeries.to_coo` and :meth:`SparseSeries.from_coo` methods (:is
 .. code-block:: python
 
    s = pd.Series([3.0, np.nan, 1.0, 3.0, np.nan, np.nan])
-   s.index = pd.MultiIndex.from_tuples([(1, 2, 'a', 0),
-                                        (1, 2, 'a', 1),
-                                        (1, 1, 'b', 0),
-                                        (1, 1, 'b', 1),
-                                        (2, 1, 'b', 0),
-                                        (2, 1, 'b', 1)],
-                                       names=['A', 'B', 'C', 'D'])
+   s.index = pd.MultiIndex.from_tuples(
+       [
+           (1, 2, "a", 0),
+           (1, 2, "a", 1),
+           (1, 1, "b", 0),
+           (1, 1, "b", 1),
+           (2, 1, "b", 0),
+           (2, 1, "b", 1),
+       ],
+       names=["A", "B", "C", "D"],
+   )
 
    s
 
@@ -108,9 +115,9 @@ Added :meth:`SparseSeries.to_coo` and :meth:`SparseSeries.from_coo` methods (:is
    ss = s.to_sparse()
    ss
 
-   A, rows, columns = ss.to_coo(row_levels=['A', 'B'],
-                                column_levels=['C', 'D'],
-                                sort_labels=False)
+   A, rows, columns = ss.to_coo(
+       row_levels=["A", "B"], column_levels=["C", "D"], sort_labels=False
+   )
 
    A
    A.todense()
@@ -123,8 +130,8 @@ from a ``scipy.sparse.coo_matrix``:
 .. code-block:: python
 
    from scipy import sparse
-   A = sparse.coo_matrix(([3.0, 1.0, 2.0], ([1, 0, 0], [0, 2, 3])),
-                         shape=(3, 4))
+
+   A = sparse.coo_matrix(([3.0, 1.0, 2.0], ([1, 0, 0], [0, 2, 3])), shape=(3, 4))
    A
    A.todense()
 
@@ -148,23 +155,23 @@ String methods enhancements
 
   .. ipython:: python
 
-     s = pd.Series(['abcd', '3456', 'EFGH'])
+     s = pd.Series(["abcd", "3456", "EFGH"])
      s.str.isalpha()
-     s.str.find('ab')
+     s.str.find("ab")
 
 - :meth:`Series.str.pad` and :meth:`Series.str.center` now accept ``fillchar`` option to specify filling character (:issue:`9352`)
 
   .. ipython:: python
 
-     s = pd.Series(['12', '300', '25'])
-     s.str.pad(5, fillchar='_')
+     s = pd.Series(["12", "300", "25"])
+     s.str.pad(5, fillchar="_")
 
 - Added :meth:`Series.str.slice_replace`, which previously raised ``NotImplementedError`` (:issue:`8888`)
 
   .. ipython:: python
 
-     s = pd.Series(['ABCD', 'EFGH', 'IJK'])
-     s.str.slice_replace(1, 3, 'X')
+     s = pd.Series(["ABCD", "EFGH", "IJK"])
+     s.str.slice_replace(1, 3, "X")
      # replaced with empty char
      s.str.slice_replace(0, 1)
 
@@ -177,8 +184,8 @@ Other enhancements
 
   .. ipython:: python
 
-     df = pd.DataFrame({'x': range(5)})
-     df.reindex([0.2, 1.8, 3.5], method='nearest')
+     df = pd.DataFrame({"x": range(5)})
+     df.reindex([0.2, 1.8, 3.5], method="nearest")
 
   This method is also exposed by the lower level ``Index.get_indexer`` and ``Index.get_loc`` methods.
 
@@ -187,7 +194,7 @@ Other enhancements
   .. code-block:: python
 
      # Returns the 1st and 4th sheet, as a dictionary of DataFrames.
-     pd.read_excel('path_to_file.xls', sheetname=['Sheet1', 3])
+     pd.read_excel("path_to_file.xls", sheetname=["Sheet1", 3])
 
 
 - Allow Stata files to be read incrementally with an iterator; support for long strings in Stata files. See the docs :ref:`here<io.stata_reader>` (:issue:`9493`:).
@@ -245,7 +252,7 @@ New behavior
 
 .. ipython:: python
 
-   t = pd.Timedelta('1 day, 10:11:12.100123')
+   t = pd.Timedelta("1 day, 10:11:12.100123")
    t.days
    t.seconds
    t.microseconds
@@ -268,9 +275,11 @@ The behavior of a small sub-set of edge cases for using ``.loc`` have changed (:
 
   .. ipython:: python
 
-     df = pd.DataFrame(np.random.randn(5, 4),
-                       columns=list('ABCD'),
-                       index=pd.date_range('20130101', periods=5))
+     df = pd.DataFrame(
+         np.random.randn(5, 4),
+         columns=list("ABCD"),
+         index=pd.date_range("20130101", periods=5),
+     )
      df
      s = pd.Series(range(5), [-2, -1, 1, 2, 3])
      s
@@ -289,7 +298,7 @@ The behavior of a small sub-set of edge cases for using ``.loc`` have changed (:
 
   .. ipython:: python
 
-     df.loc['2013-01-02':'2013-01-10']
+     df.loc["2013-01-02":"2013-01-10"]
      s.loc[-10:3]
 
 - Allow slicing with float-like values on an integer index for ``.ix``. Previously this was only enabled for ``.loc``:
@@ -318,8 +327,8 @@ The behavior of a small sub-set of edge cases for using ``.loc`` have changed (:
 
   .. code-block:: python
 
-     In [4]: df.loc[2:3]
-     KeyError: 'start bound [2] is not the [index]'
+     In[4]: df.loc[2:3]
+     KeyError: "start bound [2] is not the [index]"
 
   New behavior
 
@@ -369,7 +378,7 @@ New behavior
 
 .. ipython:: python
 
-   s = pd.Series([0, 1, 2], dtype='category')
+   s = pd.Series([0, 1, 2], dtype="category")
    s
    s.cat.ordered
    s = s.cat.as_ordered()
@@ -513,7 +522,7 @@ Other API changes
 
   .. ipython:: python
 
-    pd.to_datetime(['2000-01-31', '2000-02-28']).asof('2000-02')
+    pd.to_datetime(["2000-01-31", "2000-02-28"]).asof("2000-02")
 
   To reproduce the old behavior, simply add more precision to the label (e.g., use ``2000-02-01`` instead of ``2000-02``).
 
@@ -676,10 +685,9 @@ Bug fixes
 
   .. ipython:: python
 
-     df1 = pd.DataFrame({'x': pd.Series(['a', 'b', 'c']),
-                         'y': pd.Series(['d', 'e', 'f'])})
-     df2 = df1[['x']]
-     df2['y'] = ['g', 'h', 'i']
+     df1 = pd.DataFrame({"x": pd.Series(["a", "b", "c"]), "y": pd.Series(["d", "e", "f"])})
+     df2 = df1[["x"]]
+     df2["y"] = ["g", "h", "i"]
 
 
 .. _whatsnew_0.16.0.contributors:
