--- a/doc/source/whatsnew/v0.19.0.rst
+++ b/doc/source/whatsnew/v0.19.0.rst
@@ -1093,9 +1093,7 @@ Previously, most ``Index`` classes returned ``np.ndarray``, and ``DatetimeIndex`
 .. ipython:: python
 
    pd.Index([1, 2, 3]).unique()
-   pd.DatetimeIndex(
-       ["2011-01-01", "2011-01-02", "2011-01-03"], tz="Asia/Tokyo"
-   ).unique()
+   pd.DatetimeIndex(["2011-01-01", "2011-01-02", "2011-01-03"], tz="Asia/Tokyo").unique()
 
 .. _whatsnew_0190.api.multiindex:
 
