--- a/doc/source/whatsnew/v0.8.0.rst
+++ b/doc/source/whatsnew/v0.8.0.rst
@@ -178,9 +178,7 @@ types. For example, ``'kde'`` is a new option:
 
 .. code-block:: python
 
-   s = pd.Series(
-       np.concatenate((np.random.randn(1000), np.random.randn(1000) * 0.5 + 3))
-   )
+   s = pd.Series(np.concatenate((np.random.randn(1000), np.random.randn(1000) * 0.5 + 3)))
    plt.figure()
    s.hist(density=True, alpha=0.2)
    s.plot(kind="kde")
